syntax = "proto3";

package pb;

import "global.proto";

// direct: holder of chat, groups, subscribed channels - holder of state of users and underlying object: unseen count, last seen, ...
// it will be a list in the ui in mobiles, like whatsapp or telegram

// rules: qevent_rpc
service RPC_Direct {
    //rpc Direct (Param) returns (Response);

    //========= One =========
    // Title
    rpc DirectChangeTitle (DirectChangeTitleParam) returns (DirectChangeTitleResponse); // qevent_id_10

    // Notifications
    rpc DirectSetCustomNotification (DirectSetCustomNotificationParam) returns (DirectSetCustomNotificationResponse); // event_id_20

    // Others
    rpc DirectSetDraft (DirectSetDraftParam) returns (DirectSetDraftResponse);
    //========= One End =========

    //========= Many =========
    // crUD
    rpc DirectDeleteDirects (DirectDeleteDirectsParam) returns (DirectDeleteDirectsResponse); // qevent_id_50

    // Marks
    rpc DirectMarkAsRead (DirectMarkAsReadParam) returns (DirectMarkAsReadResponse);
    rpc DirectMarkAsUnRead (DirectMarkAsUnReadParam) returns (DirectMarkAsUnReadResponse);

    // Pin
    rpc DirectPinDirects (DirectPinDirectsParam) returns (DirectPinDirectsResponse);
    rpc DirectUnPinDirects (DirectUnPinDirectsParam) returns (DirectUnPinDirectsResponse);

    // Archives
    rpc DirectArchiveDirects (DirectArchiveDirectsParam) returns (DirectArchiveDirectsResponse);
    rpc DirectUnArchiveDirects (DirectUnArchiveDirectsParam) returns (DirectUnArchiveDirectsResponse);

    // Notifications
    rpc DirectMuteDirects (DirectMuteDirectsParam) returns (DirectMuteDirectsResponse);
    rpc DirectUnMuteDirects (DirectUnMuteDirectsParam) returns (DirectUnMuteDirectsResponse);
    //========= Many End =========

    // Folders (Not yet)
    rpc DirectCreateFolder (DirectCreateFolderParam) returns (DirectCreateFolderResponse);
    rpc DirectChangeFolder (DirectChangeFolderParam) returns (DirectChangeFolderResponse); // batch operation - includes and excludes - no state change but a all fresh data: name, includes, excludes
    rpc DirectRemoveFromFolder (DirectRemoveFromFolderParam) returns (DirectRemoveFromFolderResponse);
    rpc DirectReordersFolder (DirectReordersFolderParam) returns (DirectReordersFolderResponse);
    rpc DirectDeleteFolder (DirectDeleteFolderParam) returns (DirectDeleteFolderResponse);

    // Views
    rpc DirectGetChatsList (DirectGetChatsListParam) returns (DirectGetChatsListResponse);
    rpc DirectGetGroupsList (DirectGetGroupsListParam) returns (DirectGetGroupsListResponse);
    rpc DirectGetChannelsList (DirectGetChannelsListParam) returns (DirectGetChannelsListResponse);

    rpc DirectGetFoldersList (DirectGetFoldersListParam) returns (DirectGetFoldersListResponse); // Just folders
    rpc DirectGetFoldersFullList (DirectGetFoldersFullListParam) returns (DirectGetFoldersFullListResponse); // folders with data


    // Dep
    rpc DirectSendActionDoing (DirectSendActionDoingParam) returns (DirectSendActionDoingResponse); // ? or each (chat, groups) by their own
    // Messages
    rpc DirectClearHistories (DirectClearHistoriesParam) returns (DirectClearHistoriesResponse);
    // CRUD
    rpc DirectDeleteDirect (DirectDeleteDirectParam) returns (DirectDeleteDirectResponse); // remove?
}

//========= One =========

// Pin, Archives, Marks
message DirectChangeTitleParam {
}

message DirectChangeTitleResponse {
}


// Notifications
message DirectSetCustomNotificationParam {
}

message DirectSetCustomNotificationResponse {
}


// Others
message DirectSetDraftParam {
}

message DirectSetDraftResponse {
}


//========= One End =========

//========= Many =========
// CRUD
message DirectDeleteDirectsParam {
}

message DirectDeleteDirectsResponse {
}


// = Pin, Archives, Marks
message DirectMarkAsReadParam {
}

message DirectMarkAsReadResponse {
}


message DirectMarkAsUnReadParam {
}

message DirectMarkAsUnReadResponse {
}


message DirectPinDirectsParam {
}

message DirectPinDirectsResponse {
}


message DirectUnPinDirectsParam {
}

message DirectUnPinDirectsResponse {
}


message DirectArchiveDirectsParam {
}

message DirectArchiveDirectsResponse {
}


message DirectUnArchiveDirectsParam {
}

message DirectUnArchiveDirectsResponse {
}


// Notifications
message DirectMuteDirectsParam {
}

message DirectMuteDirectsResponse {
}


message DirectUnMuteDirectsParam {
}

message DirectUnMuteDirectsResponse {
}


//========= Many End =========
// Folders
message DirectCreateFolderParam {
}

message DirectCreateFolderResponse {
}


message DirectChangeFolderParam {
}

message DirectChangeFolderResponse {
}


message DirectRemoveFromFolderParam {
}

message DirectRemoveFromFolderResponse {
}


message DirectReordersFolderParam {
}

message DirectReordersFolderResponse {
}


message DirectDeleteFolderParam {
}

message DirectDeleteFolderResponse {
}


// Views
message DirectGetChatsListParam {
}

message DirectGetChatsListResponse {
}


message DirectGetGroupsListParam {
}

message DirectGetGroupsListResponse {
}


message DirectGetChannelsListParam {
}

message DirectGetChannelsListResponse {
}


message DirectGetFoldersListParam {
}

message DirectGetFoldersListResponse {
}


message DirectGetFoldersFullListParam {
}

message DirectGetFoldersFullListResponse {
}


// Dep
message DirectSendActionDoingParam {
}

message DirectSendActionDoingResponse {
}

// Messages
message DirectClearHistoriesParam {
}

message DirectClearHistoriesResponse {
}

// CRUD

message DirectDeleteDirectParam {
}

message DirectDeleteDirectResponse {
}


/*

message Param {
}

message Response {
}

*/