// Automatically generated rust module for 'deprecaetd_rpc_direct.proto' file

#![allow(non_snake_case)]
#![allow(non_upper_case_globals)]
#![allow(non_camel_case_types)]
#![allow(unused_imports)]
#![allow(unknown_lints)]
#![allow(clippy::all)]
#![cfg_attr(rustfmt, rustfmt_skip)]


use quick_protobuf::{BytesReader, Result, MessageRead, MessageWrite};
use super::*;

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectDeleteDirectParam { }

impl<'a> MessageRead<'a> for DirectDeleteDirectParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectDeleteDirectParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectDeleteDirectResponse { }

impl<'a> MessageRead<'a> for DirectDeleteDirectResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectDeleteDirectResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectChangeTitleParam { }

impl<'a> MessageRead<'a> for DirectChangeTitleParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectChangeTitleParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectChangeTitleResponse { }

impl<'a> MessageRead<'a> for DirectChangeTitleResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectChangeTitleResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectSetCustomNotificationParam { }

impl<'a> MessageRead<'a> for DirectSetCustomNotificationParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectSetCustomNotificationParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectSetCustomNotificationResponse { }

impl<'a> MessageRead<'a> for DirectSetCustomNotificationResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectSetCustomNotificationResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectSendActionDoingParam { }

impl<'a> MessageRead<'a> for DirectSendActionDoingParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectSendActionDoingParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectSendActionDoingResponse { }

impl<'a> MessageRead<'a> for DirectSendActionDoingResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectSendActionDoingResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectSetDraftParam { }

impl<'a> MessageRead<'a> for DirectSetDraftParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectSetDraftParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectSetDraftResponse { }

impl<'a> MessageRead<'a> for DirectSetDraftResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectSetDraftResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectDeleteDirectsParam { }

impl<'a> MessageRead<'a> for DirectDeleteDirectsParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectDeleteDirectsParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectDeleteDirectsResponse { }

impl<'a> MessageRead<'a> for DirectDeleteDirectsResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectDeleteDirectsResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectMarkAsReadParam { }

impl<'a> MessageRead<'a> for DirectMarkAsReadParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectMarkAsReadParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectMarkAsReadResponse { }

impl<'a> MessageRead<'a> for DirectMarkAsReadResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectMarkAsReadResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectMarkAsUnReadParam { }

impl<'a> MessageRead<'a> for DirectMarkAsUnReadParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectMarkAsUnReadParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectMarkAsUnReadResponse { }

impl<'a> MessageRead<'a> for DirectMarkAsUnReadResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectMarkAsUnReadResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectPinDirectsParam { }

impl<'a> MessageRead<'a> for DirectPinDirectsParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectPinDirectsParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectPinDirectsResponse { }

impl<'a> MessageRead<'a> for DirectPinDirectsResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectPinDirectsResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectUnPinDirectsParam { }

impl<'a> MessageRead<'a> for DirectUnPinDirectsParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectUnPinDirectsParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectUnPinDirectsResponse { }

impl<'a> MessageRead<'a> for DirectUnPinDirectsResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectUnPinDirectsResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectArchiveDirectsParam { }

impl<'a> MessageRead<'a> for DirectArchiveDirectsParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectArchiveDirectsParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectArchiveDirectsResponse { }

impl<'a> MessageRead<'a> for DirectArchiveDirectsResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectArchiveDirectsResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectUnArchiveDirectsParam { }

impl<'a> MessageRead<'a> for DirectUnArchiveDirectsParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectUnArchiveDirectsParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectUnArchiveDirectsResponse { }

impl<'a> MessageRead<'a> for DirectUnArchiveDirectsResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectUnArchiveDirectsResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectClearHistoriesParam { }

impl<'a> MessageRead<'a> for DirectClearHistoriesParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectClearHistoriesParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectClearHistoriesResponse { }

impl<'a> MessageRead<'a> for DirectClearHistoriesResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectClearHistoriesResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectMuteDirectsParam { }

impl<'a> MessageRead<'a> for DirectMuteDirectsParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectMuteDirectsParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectMuteDirectsResponse { }

impl<'a> MessageRead<'a> for DirectMuteDirectsResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectMuteDirectsResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectUnMuteDirectsParam { }

impl<'a> MessageRead<'a> for DirectUnMuteDirectsParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectUnMuteDirectsParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectUnMuteDirectsResponse { }

impl<'a> MessageRead<'a> for DirectUnMuteDirectsResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectUnMuteDirectsResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectCreateFolderParam { }

impl<'a> MessageRead<'a> for DirectCreateFolderParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectCreateFolderParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectCreateFolderResponse { }

impl<'a> MessageRead<'a> for DirectCreateFolderResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectCreateFolderResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectChangeFolderParam { }

impl<'a> MessageRead<'a> for DirectChangeFolderParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectChangeFolderParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectChangeFolderResponse { }

impl<'a> MessageRead<'a> for DirectChangeFolderResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectChangeFolderResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectRemoveFromFolderParam { }

impl<'a> MessageRead<'a> for DirectRemoveFromFolderParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectRemoveFromFolderParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectRemoveFromFolderResponse { }

impl<'a> MessageRead<'a> for DirectRemoveFromFolderResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectRemoveFromFolderResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectReordersFolderParam { }

impl<'a> MessageRead<'a> for DirectReordersFolderParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectReordersFolderParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectReordersFolderResponse { }

impl<'a> MessageRead<'a> for DirectReordersFolderResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectReordersFolderResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectDeleteFolderParam { }

impl<'a> MessageRead<'a> for DirectDeleteFolderParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectDeleteFolderParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectDeleteFolderResponse { }

impl<'a> MessageRead<'a> for DirectDeleteFolderResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectDeleteFolderResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetChatsListParam { }

impl<'a> MessageRead<'a> for DirectGetChatsListParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetChatsListParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetChatsListResponse { }

impl<'a> MessageRead<'a> for DirectGetChatsListResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetChatsListResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetGroupsListParam { }

impl<'a> MessageRead<'a> for DirectGetGroupsListParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetGroupsListParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetGroupsListResponse { }

impl<'a> MessageRead<'a> for DirectGetGroupsListResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetGroupsListResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetChannelsListParam { }

impl<'a> MessageRead<'a> for DirectGetChannelsListParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetChannelsListParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetChannelsListResponse { }

impl<'a> MessageRead<'a> for DirectGetChannelsListResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetChannelsListResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetFoldersListParam { }

impl<'a> MessageRead<'a> for DirectGetFoldersListParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetFoldersListParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetFoldersListResponse { }

impl<'a> MessageRead<'a> for DirectGetFoldersListResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetFoldersListResponse { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetFoldersFullListParam { }

impl<'a> MessageRead<'a> for DirectGetFoldersFullListParam {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetFoldersFullListParam { }

#[derive(Debug, Default, PartialEq, Clone)]
pub struct DirectGetFoldersFullListResponse { }

impl<'a> MessageRead<'a> for DirectGetFoldersFullListResponse {
    fn from_reader(r: &mut BytesReader, _: &[u8]) -> Result<Self> {
        r.read_to_end();
        Ok(Self::default())
    }
}

impl MessageWrite for DirectGetFoldersFullListResponse { }


